# LTerminal

./: .gitmodules  CMakeLists.txt  GoogleService-Info.plist  README.md  iphone-Entitlements.plist  iphone-Info.plist  mac-Info.plist  render.cpp  term.cpp  term.fbs  term.h  term.rc  term_menu.cpp  term_menu.h  term_mobile.h  term_tests.cpp
Assets.xcassets/AppIcon.appiconset/: Contents.json
LTerminal-android/: AndroidManifest.xml  CMakeLists.txt  GooglePlayRelease.json.enc  LTerminal_Distribution.keystore.enc  build.gradle  proguard-rules.pro  settings.gradle
LTerminal-android/gradle/wrapper/: gradle-wrapper.properties
LTerminal-android/jni/: Android.mk
LTerminal-android/res/values/: strings.xml
LTerminal-android/res/values-es/: strings.xml
LTerminal-android/res/values-ja/: strings.xml
LTerminal-android/res/values-ru/: strings.xml
LTerminal-android/res/values-zh/: strings.xml
LTerminal-android/src/: MainActivity.java
LTerminal-ios/: Entitlements.plist  Info.plist
LTerminal-ios/Settings.bundle/: Root.plist
LTerminal-ios/zh-Hans.lproj/: Localizable.strings
LTerminal-iphone/LTerminal.xcodeproj/: project.pbxproj
LTerminal-iphone/Resources/: LaunchScreen.xib
LTerminal-iphone/Settings.bundle/: Root.plist
LTerminal-iphone/en.lproj/: Localizable.strings
LTerminal-iphone/es.lproj/: Localizable.strings
LTerminal-iphone/ja.lproj/: Localizable.strings
LTerminal-iphone/ru.lproj/: Localizable.strings
LTerminal-mac/: Info.plist  icon.icns
LTerminal-windows/: term.rc
assets/: alien.glsl  credits.txt  fire.glsl  fractal.glsl  stormy.glsl  water.glsl  waves.glsl
imports/: CMakeLists.txt
lterm-android/: AndroidManifest.xml  build.gradle  proguard-rules.pro  settings.gradle
lterm-android/jni/: Android.mk  Application.mk
lterm-android/res/layout/: preferences.xml
lterm-android/res/values/: strings.xml
lterm-android/src/: MainActivity.java
lterm-iphone/LTerminal.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lterm-iphone/LTerminal.xcodeproj/project.xcworkspace/xcshareddata/: LTerminal.xccheckout
lterm-iphone/LTerminal.xcodeproj/project.xcworkspace/xcuserdata/p.xcuserdatad/: UserInterfaceState.xcuserstate
lterm-iphone/LTerminal.xcodeproj/xcuserdata/p.xcuserdatad/xcschemes/: LTerminal.xcscheme
lterm-iphone/Settings.bundle/: Root.plist
lterm-iphone/es.lproj/: Localizable.strings
term-android/jni/: Android.mk
term-iphone/LTerminal.xcodeproj/: project.pbxproj
term-iphone/LTerminal.xcodeproj/project.xcworkspace/xcshareddata/: LTerminal.xccheckout
term-iphone/LTerminal.xcodeproj/xcuserdata/p.xcuserdatad/xcschemes/: xcschememanagement.plist
